examples/invalid/typechecking/unboundVar.ordinis
foo : Int64
foo = x
